--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-torch==2.6.0
-numpy>=1.26.4,<2.0
-pandas==2.2.2
-lightning==2.4.0
-datasets==3.0.1
-transformers==4.44.2
-peft==0.13.2
+pandas==2.1.1
+matplotlib==3.8.0
+seaborn==0.12.2
+scikit-learn==1.3.0
+statsmodels==0.14.0
+tqdm==4.66.1
+torch==2.2.0
+lightning==2.2.0.post0
+tensorboard==2.16.2
+bokeh==3.3.4
+transformers[torch]==4.41.2
+datasets==2.19.1
+torchinfo==1.8.0
+accelerate==0.30.1
+evaluate==0.4.2
+sentence-transformers==3.0.1
+gradio==4.36.1
+ollama==0.2.1
+spacy==3.8.7
 nltk==3.9.1
-optuna==3.6.1
-plotly==5.22.0
-fsspec==2024.6.1
